<resources>
    <string name="app_name">Primes</string>
    <string-array name="order">
        <item>Lower</item>
        <item>Higher</item>
    </string-array>
    <string name="thermometer">Thermometer</string>
    <string name="winter">Winter</string>
    <string name="summer">Summer</string>
    <string name="season">Season:</string>
    <string name="celsius">Celsius</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="kelvin">Kelvin</string>
    <string name="tempType">Type temperature:</string>
    <string name="temperature">Temperature:</string>
    <string name="humidity">Humidity:</string>

    <string name="number">Number:</string>
    <string name="calculated">Calculated</string>
    <string name="factorial">Factorial:</string>
    <string name="squareroot">Square root:</string>
    <string name="cuberoot">Cube root:</string>
    <string name="lg">Logarithms lg:</string>
    <string name="ln">Logarithms ln:</string>
    <string name="square">Squaring:</string>
    <string name="cube">Cube:</string>
    <string name="simple">Simplicity test:</string>
    <string name="run">Run</string>
    <string name="runAll">Run All</string>
    <string name="cancel">Cancel</string>

</resources>