<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".src.ArithmeticModuleActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textViewNumber2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number"
            android:textColor="@color/purple_500"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/editTextNumberDecimal2"
            app:layout_constraintTop_toTopOf="@+id/editTextNumberDecimal2"
            app:layout_constraintVertical_bias="0.521"
            tools:layout_editor_absoluteX="20dp" />

        <EditText
            android:id="@+id/editTextNumberDecimal2"
            android:layout_width="117dp"
            android:layout_height="50dp"
            android:layout_marginStart="70dp"
            android:ems="20"
            android:inputType="numberDecimal"
            android:text="0"
            app:layout_constraintStart_toEndOf="@+id/textViewNumber2"
            tools:layout_editor_absoluteY="20dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:text="@string/calculated"
            android:textColor="@color/purple_500"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/buttonFactRun"
            app:layout_constraintTop_toTopOf="@+id/buttonAll"
            app:layout_constraintVertical_bias="0.619"
            tools:layout_editor_absoluteX="20dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="16dp"
            android:text="@string/factorial"
            android:textColor="@color/purple_500"
            android:textSize="15dp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:layout_editor_absoluteX="20dp" />

        <TextView
            android:id="@+id/textViewFactView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="12dp"
            android:text="0"
            android:textColor="@color/purple_500"
            android:textSize="15dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/buttonFactRun"
            tools:layout_editor_absoluteX="20dp" />

        <Button
            android:id="@+id/buttonFactRun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/run"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/editTextNumberDecimal2"
            app:layout_constraintTop_toBottomOf="@+id/buttonAll" />

        <TextView
            android:id="@+id/textViewRoot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:text="@string/squareroot"
            android:textColor="@color/purple_500"
            android:textSize="15dp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/textViewFactView"
            tools:layout_editor_absoluteX="20dp" />

        <TextView
            android:id="@+id/textViewRoot2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="16dp"
            android:text="@string/cuberoot"
            android:textColor="@color/purple_500"
            android:textSize="15dp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/textViewRoot"
            tools:layout_editor_absoluteX="20dp" />

        <TextView
            android:id="@+id/textViewSquareRootView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textColor="@color/purple_500"
            android:textSize="15dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/editTextNumberDecimal2"
            app:layout_constraintTop_toTopOf="@+id/textViewRoot" />

        <TextView
            android:id="@+id/textViewCubeRootView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textColor="@color/purple_500"
            android:textSize="15dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/editTextNumberDecimal2"
            app:layout_constraintTop_toTopOf="@+id/textViewRoot2" />


        <Button
            android:id="@+id/buttonRootRun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/run"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textViewCubeRootView"
            app:layout_constraintTop_toBottomOf="@+id/textViewCubeRootView" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="20dp"
            android:text="@string/lg"
            android:textColor="@color/purple_500"
            android:textSize="15dp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/buttonRootRun"
            tools:layout_editor_absoluteX="20dp" />

        <TextView
            android:id="@+id/textViewRoot4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="12dp"
            android:text="@string/cuberoot"
            android:textColor="@color/purple_500"
            android:textSize="15dp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            tools:layout_editor_absoluteX="20dp" />

        <TextView
            android:id="@+id/textViewLgView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textColor="@color/purple_500"
            android:textSize="15dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/buttonRootRun"
            app:layout_constraintTop_toTopOf="@+id/textView3" />

        <TextView
            android:id="@+id/textViewLn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textColor="@color/purple_500"
            android:textSize="15dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/textViewLgView"
            app:layout_constraintTop_toTopOf="@+id/textViewRoot4" />


        <Button
            android:id="@+id/buttonRootRun2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/run"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textViewLn"
            app:layout_constraintTop_toBottomOf="@+id/textViewLn" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:text="@string/square"
            android:textColor="@color/purple_500"
            android:textSize="15dp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/buttonRootRun2"
            tools:layout_editor_absoluteX="20dp" />

        <TextView
            android:id="@+id/textViewRoot6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:text="@string/cube"
            android:textColor="@color/purple_500"
            android:textSize="15dp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            tools:layout_editor_absoluteX="20dp" />

        <TextView
            android:id="@+id/textViewSquareView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="0"
            android:textColor="@color/purple_500"
            android:textSize="15dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/buttonRootRun2"
            app:layout_constraintTop_toBottomOf="@+id/buttonRootRun2" />


        <TextView
            android:id="@+id/textViewCube"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="0"
            android:textColor="@color/purple_500"
            android:textSize="15dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/textViewSquareView"
            app:layout_constraintTop_toBottomOf="@+id/textViewSquareView" />


        <Button
            android:id="@+id/buttonRootRunCube"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/run"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textViewCube"
            app:layout_constraintTop_toBottomOf="@+id/textViewCube" />

        <TextView
            android:id="@+id/textViewRoot7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="12dp"
            android:text="@string/simple"
            android:textColor="@color/purple_500"
            android:textSize="15dp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/buttonRootRunCube"
            tools:layout_editor_absoluteX="20dp" />

        <TextView
            android:id="@+id/textViewTest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="0"
            android:textColor="@color/purple_500"
            android:textSize="15dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/buttonRootRunCube"
            app:layout_constraintTop_toBottomOf="@+id/buttonRootRunCube" />

        <Button
            android:id="@+id/buttonTestRun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/run"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textViewTest"
            app:layout_constraintTop_toBottomOf="@+id/textViewTest" />

        <Button
            android:id="@+id/buttonAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/runAll"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/editTextNumberDecimal2"
            app:layout_constraintTop_toBottomOf="@+id/editTextNumberDecimal2" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>